RESOLVED FIXED104180
Fix some repaint/paintCounter confusion, and reset it when getting layers out of the layer pool
https://bugs.webkit.org/show_bug.cgi?id=104180
Summary Fix some repaint/paintCounter confusion, and reset it when getting layers out...
Simon Fraser (smfr)
Reported 2012-12-05 15:40:46 PST
Fix some repaint/paintCounter confusion, and reset it when getting layers out of the layer pool
Attachments
Patch (6.65 KB, patch)
2012-12-05 15:43 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2012-12-05 15:43:17 PST
Simon Fraser (smfr)
Comment 2 2012-12-05 16:08:23 PST
Note You need to log in before you can comment on or make changes to this bug.