Fix some repaint/paintCounter confusion, and reset it when getting layers out of the layer pool https://bugs.webkit.org/show_bug.cgi?id=104180

Reviewed by Tim Horton.

Layers retrieved from the LayerPool by TileCache need to have their
repaint counters reset, otherwise the scroll performance logging gets
confused.

Also, the counter counts paints, not repaints (invalidations), so
rename it accordingly.

* page/scrolling/mac/ScrollingTreeScrollingNodeMac.mm:
(WebCore::ScrollingTreeScrollingNodeMac::logExposedUnfilledArea): Whitespace fix.
* platform/graphics/GraphicsLayer.h:
* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::blankPixelCountForTiles):
(WebCore::TileCache::createTileLayer):
(WebCore::TileCache::drawRepaintCounter):
* platform/graphics/ca/mac/WebTileLayer.h:
* platform/graphics/ca/mac/WebTileLayer.mm:
(-[WebTileLayer resetPaintCount]):
(-[WebTileLayer incrementPaintCount]):
(-[WebTileLayer paintCount]):
(-[WebTileLayer logFilledFreshTile]):

Canonical link: https://commits.webkit.org/122352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136774 268f45cc-cd09-0410-ab3c-d52691b4dbfc